[package]
name = "bssrv"
version = "0.1.0"
authors = ["Miroslav Krýsl <mkrysl@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
log = "0.4.8"
simplelog = "0.7.4"
mio = "0.6.21"
ctrlc = "3.1.3"